# local-doc-viewer

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  NOTICE  README.en.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_en.yml  bug_report_zh.yml  config.yml
apps/desktop-tauri/: README.md  index.html  package-lock.json  package.json
apps/desktop-tauri/src/: appearanceThemeState.ts  autoChapterNavigation.ts  diagnosticSummaryState.ts  documentFind.ts  documentTypes.ts  localDocumentPath.ts  main.ts  ofdCacheCleanupState.ts  ofdContinuousRenderState.ts  ofdDocumentPolicyState.ts  ofdPageCacheController.ts  ofdPageImageState.ts  ofdPageRenderCache.ts  ofdPageRenderer.ts  ofdPrefetchState.ts  ofdRenderRequestState.ts  ofdScaleRenderState.ts  ofdTextBridge.ts  overlayPosition.ts  pageNavigation.ts  pdfContinuousVirtualState.ts  performanceStatus.ts  printViewState.ts  readerActionState.ts  readerDocumentCenterState.ts  readerLayoutState.ts  (+10 more)
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/linux/deb/: postrm
apps/desktop-tauri/src-tauri/linux/desktop/: local-doc-viewer.desktop
apps/desktop-tauri/src-tauri/linux/mime/: local-doc-viewer-ofd.xml
apps/desktop-tauri/src-tauri/src/: cache_policy.rs  document_core.rs  lib.rs  main.rs  office_converter.rs  renderer_sidecar.rs  webview_print.rs
scripts/fixtures/: create-public-pdf-chinese-fixture.mjs  create-public-pdf-fixtures.mjs
testdata/public/: NOTICE
(+64 files in other folders)
