[package]
name = "desktop-tauri"
version = "0.1.3"
description = "A Tauri App"
authors = ["local-doc-viewer contributors"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2.4.2", default-features = false, features = ["deflate-miniz"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61.2"
